--- a/index.html
+++ b/index.html
@@ -1,18 +1,84 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Engineering Portfolio</title>
-    <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1>Hello, I’m [Your Name]</h1>
-    <p>Welcome to my engineering portfolio. I’ll use this site to document my projects and progress.</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Engineering Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: #222;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #444;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 0.75rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    ul {
+      list-style: square;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Jordan's Engineering Portfolio</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="#">Projects</a>
+    <a href="#">Blog</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <main>
+    <h2>Welcome</h2>
+    <p>This site documents my engineering projects, progress, and learning journey.</p>
+    <h3>Current Goals:</h3>
     <ul>
-      <li>✅ Portfolio website (this!)</li>
+      <li>✅ Build this portfolio website</li>
       <li>🔧 Build a Linux computer from scratch</li>
       <li>🛡️ Learn cybersecurity</li>
       <li>📡 Make devices Wi-Fi controllable</li>
-      <li>⚡ Convert a gas car into an EV</li>
+      <li>⚡ Convert a gas car into a custom EV</li>
     </ul>
-  </body>
+  </main>
+</body>
 </html>
